Fixed horizontal breaks in CSS, table size, and background color

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+body{
+    background-color: lightgray;
+}
 .Body{
     max-width: 960px;
     margin: auto;
@@ -44,10 +47,12 @@ h2{
 
 p{
     text-align: center;
+    margin: 10px;
 }
 table{
+    margin: auto;
     border-collapse: collapse;
-    width: 100%;
+    width: 90%;
 }
 td, th{
     border: 1px solid grey;
